fix hashing function